--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       
           <div class="safety-card">
             <img src="assets/03bd7e680fdfbef370f1969b4e4077a614fe73a3.png" alt="Assuring Cleanliness" />
-            <div class="card-overlay dark">
+            <div class="card-overlay">
               <h3>Assuring <br />Cleanliness</h3>
               <p>Rigid 4-Step Sterilization process, assuring a safe & spotless clinic.</p>
               <a href="#" class="learn-more">Learn More <span>➔</span></a>
